Fix/lesson content center align (#1597)
* align lesson content to center

* fixed to only on lg-breakpoint-up

* align lesson content to center\
* add class to navigation wrapper and margin-right of -60
* change col-lg-9 to 8 to align better
* previous commit changed .lesson max-width to 1240px

* container-fluid
removes negative margin
adds container-fluid to lessons
changes lesson-content wrapper to col-6

* max-width to lesson container

* removes .lesson content max-with

--- a/app/assets/stylesheets/components/lesson/_navigation.scss
+++ b/app/assets/stylesheets/components/lesson/_navigation.scss
@@ -1,3 +1,8 @@
+.lesson-nav-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
 .lesson-navigation {
   padding-bottom: 82px;
   position: -webkit-sticky;
@@ -32,7 +37,6 @@
   }
 
   &__link {
-
     &.active {
       color: $black;
       font-weight: bold;
