--- a/app/assets/stylesheets/components/lesson/lesson_content.scss
+++ b/app/assets/stylesheets/components/lesson/lesson_content.scss
@@ -18,7 +18,7 @@
       }
     }
   }
-  
+
   h4 {
     margin-bottom: 10px;
     font-weight: bold;
@@ -45,7 +45,8 @@
     font-size: 1.125rem;
   }
 
-  ul, ol {
+  ul,
+  ol {
     line-height: 1.9;
   }
 
@@ -62,7 +63,6 @@
   }
 
   li {
-
     ul {
       margin-bottom: 0;
     }
@@ -92,7 +92,8 @@
       margin-bottom: 0;
     }
 
-    li, p {
+    li,
+    p {
       color: $text-primary;
     }
 
@@ -114,7 +115,7 @@
       color: $grey;
       font-size: 1.125rem;
     }
-    
+
     ul {
       margin: 15px;
     }
@@ -132,9 +133,7 @@
     cursor: pointer;
 
     &:hover {
-      color: $primary
+      color: $primary;
     }
   }
 }
-
-
